@@ -1,4 +1,15 @@
 ------------------------------------------------------------------------
+r2595 | gaser | 2024-07-08 21:03:40
+
+Changed paths:
+ M CHANGES.txt
+ M Contents.m
+ M cat_spm_results_ui.m
+ M doc/cat.html
+
+Fixed: Added checks for additional cat-tools that should be ignored if CAT12
+       is not installed.
+------------------------------------------------------------------------
 r2583 | gaser | 2024-05-25 15:33:40
 
 Changed paths:
@@ -10,7 +21,7 @@ Changed paths:
  M templates_MNI152NLin2009cAsym/thalamic_nuclei.txt
 
 Fixed: Corrected wrong labels of thalamic nuclei atlas. Thanks to Jonas Krauß
-       for poiting to this error and Manoj Saranathan for help with the atlas
+       for pointing to this error and Manoj Saranathan for help with the atlas
        labels.
 ------------------------------------------------------------------------
 r2582 | gaser | 2024-05-21 01:23:31
